kube-addons/prometheus/1-prometheus-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.4.3
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus
              mountPath: /etc/prometheus/
      volumes:
        - name: prometheus
          configMap:
            defaultMode: 420
            name: prometheus
