kube-addons/prometheus/3-prometheus-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-system
spec:
  rules:
  - host: lunatech.prometheus.hariprasad-karthigasu.info
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
